// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InformationContainer component > Render correctly with JSX as content 1`] = `
<div
  className="MuiStack-root css-1xcvc1q-MuiStack-root"
>
  <div
    className="MuiBox-root css-iuqs4u"
  >
    <p
      className="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
    >
      test-title
    </p>
    <hr
      className="MuiDivider-root MuiDivider-fullWidth css-159wgzx-MuiDivider-root"
    />
    <span
      className="MuiTypography-root MuiTypography-caption css-g171c3-MuiTypography-root"
    >
      label-description
    </span>
  </div>
  <div
    className="MuiBox-root css-1rr4qq7"
  >
    <div
      className="MuiTypography-root MuiTypography-body2 css-1vn33h7-MuiTypography-root"
    >
      <span
        className="MuiBox-root css-13o7eu2"
      >
        <p>
          information
        </p>
      </span>
    </div>
  </div>
</div>
`;

exports[`InformationContainer component > Render correctly with column direction 1`] = `
<div
  className="MuiStack-root css-nen11g-MuiStack-root"
>
  <div
    className="MuiBox-root css-1pdb85g"
  >
    <p
      className="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
    >
      test-title
    </p>
  </div>
  <div
    className="MuiBox-root css-1rr4qq7"
  >
    <p
      className="MuiTypography-root MuiTypography-body2 css-1vn33h7-MuiTypography-root"
    >
      <span
        className="MuiBox-root css-13o7eu2"
      >
        information
      </span>
    </p>
  </div>
</div>
`;

exports[`InformationContainer component > Render correctly with content as tring 1`] = `
<div
  className="MuiStack-root css-1xcvc1q-MuiStack-root"
>
  <div
    className="MuiBox-root css-iuqs4u"
  >
    <p
      className="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
    >
      test-title
    </p>
    <hr
      className="MuiDivider-root MuiDivider-fullWidth css-159wgzx-MuiDivider-root"
    />
    <span
      className="MuiTypography-root MuiTypography-caption css-g171c3-MuiTypography-root"
    >
      label-description
    </span>
  </div>
  <div
    className="MuiBox-root css-1rr4qq7"
  >
    <p
      className="MuiTypography-root MuiTypography-body2 css-1vn33h7-MuiTypography-root"
    >
      <span
        className="MuiBox-root css-13o7eu2"
      >
        information
      </span>
    </p>
  </div>
</div>
`;

exports[`InformationContainer component > Render correctly with copy to clipboard button 1`] = `
<div
  className="MuiStack-root css-185s2x1-MuiStack-root"
>
  <div
    className="MuiBox-root css-iuqs4u"
  >
    <p
      className="MuiTypography-root MuiTypography-body2 css-1xwhmis-MuiTypography-root"
    >
      test-title
    </p>
  </div>
  <div
    className="MuiBox-root css-1rr4qq7"
  >
    <p
      className="MuiTypography-root MuiTypography-body2 css-1vn33h7-MuiTypography-root"
    >
      <span
        className="MuiBox-root css-k1s5lc"
      >
        information
      </span>
      <button
        data-value="test"
        tooltipTitle="test"
        type="button"
      >
        Copy
      </button>
    </p>
  </div>
</div>
`;

exports[`InformationContainer component > Renders correctly 1`] = `
<div
  className="MuiStack-root css-1xcvc1q-MuiStack-root"
>
  <div
    className="MuiBox-root css-iuqs4u"
  >
    <p
      className="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
    >
      test-title
    </p>
  </div>
  <div
    className="MuiBox-root css-1rr4qq7"
  >
    <p
      className="MuiTypography-root MuiTypography-body2 css-1vn33h7-MuiTypography-root"
    >
      <span
        className="MuiBox-root css-13o7eu2"
      >
        information
      </span>
    </p>
  </div>
</div>
`;

exports[`InformationContainer component > Renders the loading skeleton correctly 1`] = `
<div
  className="MuiStack-root css-1xcvc1q-MuiStack-root"
>
  <div
    className="MuiBox-root css-iuqs4u"
  >
    <span
      className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
      style={
        {
          "height": undefined,
          "width": undefined,
        }
      }
    />
  </div>
  <div
    className="MuiBox-root css-1rr4qq7"
  >
    <span
      className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
      style={
        {
          "height": undefined,
          "width": undefined,
        }
      }
    />
    <span
      className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
      style={
        {
          "height": undefined,
          "width": undefined,
        }
      }
    />
  </div>
</div>
`;
